refactor: migrate Database, Mail, and CORS config to environment variables